2013-03-31  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/lst.c: print only lower 4 addres bytes in mempry map listing
  * libgputils/gpwritehex.c: added function start_record() and other
    small changes
  * gpasm/gpasm.c, libgputils/gpcfg.h:  cosmetic changes
  * gpasm/testsuite/gpasm.project/asmfiles/config3.asm: make it assemble
    with MPASM(X)
  * gpasm/directive.c,
    gpasm/testsuite/gpasm.project/asmfiles/config4.asm,
    gpasm/testsuite/gpasm.project/hexfiles/config4.hex,
    gpasm/testsuite/gpasm.project/listfiles/config4.lst:
    don't emit untouched bytes to the hex file for CONFIG directive;
    added regression test

2013-03-30  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/parse.y: fixed cblock listing

2013-03-29  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpsymbol.c: fixed bug
    #262 - "Define and macro arguments: Error[124] : Illegal argument"
  * gpasm/testsuite/gpasm.project/asmfiles/sym.asm,
    gpasm/testsuite/gpasm.project/listfiles/sym.lst,
    gpasm/testsuite/gpasm.project/hexfiles/sym.hex:
    added regression test for bug #262

2013-03-17  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/scan.l, gpasm/testsuite/gpasm.project/objasm/direct.asm,
    gpasm/testsuite/gpasm.project/objlstfiles/direct.lst,
    gpasm/testsuite/gpasm.project/objfiles/direct.o:
    fixed tokenizer bug for very long macro parameters,
    enhaced direct.asm regression test

2013-03-08  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c, gpasm/lst.c, libgputils/gpopcode.c,
    libgputils/gpopcode.h, libgputils/gpcoff.h, libgputils/gpdis.c.
    libgputils/gpcofflink.c, libgputils/gpprocessor.c,
    libgputils/gpprocessor.h,
    gpasm/testsuite/gpasm.project/asmfiles/op12e_12f529.asm,
    gpasm/testsuite/gpasm.project/asmfiles/op12e_16f570.asm,
    gpasm/testsuite/gpasm.project/hexfiles/op12e_16f570.hex,
    gpasm/testsuite/gpasm.project/hexfiles/op12e_12f529.hex,